--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="script.js"></script>
     <script>
         // APIキーをここに設定してください
-        const API_KEY = "Google Maps APIキーをここに貼り付け";
+        const API_KEY = "AIzaSyA5owDIo__lGqmq-2w4fH7LL8qSnxH2V6Q";
 
         // Google Maps APIのスクリプトを動的に読み込む
         (function() {
