APIキーの削除

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <script src="script.js"></script>
     <script>
         // APIキーをここに設定してください
-        const API_KEY = "AIzaSyA5owDIo__lGqmq-2w4fH7LL8qSnxH2V6Q";
-
+        const API_KEY = "ここにあなたのAPIキーを入力してください";
         // Google Maps APIのスクリプトを動的に読み込む
         (function() {
             const script = document.createElement('script');
