ヒント機能追加

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <div id="pano"></div>
         <div id="map"></div>
     </div>
+    <button id="hint-button">HINT</button>
     <div id="result"></div>
     <button id="guess-button">GUESS</button>
 
