1回だけ目的地との距離知れる機能

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
         <div id="map"></div>
     </div>
     <div id="result"></div>
-    <button id="guess-button">GUESS</button>
+    <div id="distance-display"></div>
+    <div id="button-container">
+        <button id="guess-button">GUESS</button>
+        <button id="reveal-distance-button">Reveal Distance</button>
+    </div>
 
     <script src="script.js"></script>
     <script src="/api/maps-script"></script>
