--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>東京5kmチャレンジ</h1>
+    <div style="text-align: center; margin-bottom: 10px;">
+        <a href="rules.html" style="color: #1a73e8; text-decoration: none; font-weight: bold;">📋 ルール説明</a>
+    </div>
     <div id="game-container">
         <div id="pano"></div>
         <div id="map"></div>
