23区限定、半径3kmに

--- a/public/rules.html
+++ b/public/rules.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>東京5kmチャレンジ - ルール</title>
+    <title>東京3kmチャレンジ - ルール</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <style>
@@ -69,7 +69,7 @@
 </head>
 
 <body>
-    <h1>東京5kmチャレンジ - ルール説明</h1>
+    <h1>東京3kmチャレンジ - ルール説明</h1>
     
     <div class="rules-container">
         <div class="rules-section">
@@ -80,7 +80,7 @@
         <div class="rules-section">
             <h2>📋 基本ルール</h2>
             <ul>
-                <li><strong>スタート地点：</strong> フラッグから5km以内のランダムな地点からスタートします</li>
+                <li><strong>スタート地点：</strong> フラッグから3km以内のランダムな地点からスタートします</li>
                 <li><strong>目標：</strong> ストリートビューを使って街を探索し、赤いフラッグを見つけてください</li>
                 <li><strong>操作方法：</strong> ストリートビューで自由に移動・回転して探索できます</li>
                 <li><strong>推測：</strong> フラッグの位置を特定したら「GUESS」ボタンを押してください</li>
@@ -137,7 +137,7 @@
         </div>
     </div>
     
-    <a href="index.html" class="start-game-button">🎮 ゲームを開始する</a>
+    <a href="/" class="start-game-button">🎮 ゲームを開始する</a>
 </body>
 
 </html>
