--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <title>東京5kmチャレンジ</title>
+    <title>東京3kmチャレンジ</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>東京5kmチャレンジ</h1>
+    <h1>東京3kmチャレンジ</h1>
     <div style="text-align: center; margin-bottom: 10px;">
-        <a href="rules.html" style="color: #1a73e8; text-decoration: none; font-weight: bold;">📋 ルール説明</a>
+        <a href="/rules" style="color: #1a73e8; text-decoration: none; font-weight: bold;">📋 ルール説明</a>
     </div>
     <div id="game-container">
         <div id="pano"></div>
