ルーティング改善

--- a/public/game.html
+++ b/public/game.html
@@ -21,6 +21,7 @@
     <div id="button-container">
         <button id="guess-button">GUESS</button>
         <button id="reveal-distance-button">Reveal Distance</button>
+        <button id="restart-button" style="display: none;">RESTART</button>
     </div>
 
     <script src="game.js"></script>
