--- a/public/rules.html
+++ b/public/rules.html
@@ -137,7 +137,7 @@
         </div>
     </div>
     
-    <a href="/" class="start-game-button">🎮 ゲームを開始する</a>
+    <a href="/game" class="start-game-button">🎮 ゲームを開始する</a>
 </body>
 
 </html>
