--- a/public/game.html
+++ b/public/game.html
@@ -20,8 +20,9 @@
     <div id="distance-display"></div>
     <div id="button-container">
         <button id="guess-button">GUESS</button>
-        <button id="reveal-distance-button">Reveal Distance</button>
+        <button id="reveal-distance-button">HINT</button>
         <button id="restart-button" style="display: none;">RESTART</button>
+        <button id="exit-button" style="display: none;">EXIT</button>
     </div>
 
     <script src="game.js"></script>
