コンパスつけてみた

--- a/public/game.html
+++ b/public/game.html
@@ -18,6 +18,12 @@
     </div>
     <div id="result"></div>
     <div id="distance-display"></div>
+    <div id="compass-container">
+        <div id="compass">
+            <div id="compass-needle"></div>
+            <div id="compass-text">N</div>
+        </div>
+    </div>
     <div id="button-container">
         <button id="guess-button">GUESS</button>
         <button id="reveal-distance-button">HINT</button>
