画像背景に関する変更

--- a/public/rules.html
+++ b/public/rules.html
@@ -6,6 +6,16 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <style>
+        body {
+            background-image: url('images/pageimage.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            margin: 0;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+        }
+        
         .rules-container {
             max-width: 800px;
             margin: 0 auto;
