ランキング用のモデルを定義

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lost Point Gesser - Start</title>
+    <title>Lost Point Guesser - Start</title>
     <link rel="stylesheet" href="start_screen.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     </div>
 
     <div class="container">
-        <h1 class="title">Lost Point Gesser</h1>
+        <h1 class="title">Lost Point Guesser</h1>
 
         <div class="buttons-container">
             <div class="button-box">
