--- a/public/rules.html
+++ b/public/rules.html
@@ -62,18 +62,31 @@
         
         .start-game-button {
             background-color: #28a745;
-            font-size: 1.2em;
-            padding: 15px 30px;
+            font-size: 1.3em;
+            padding: 16px 35px;
             margin: 30px auto;
             display: block;
             text-decoration: none;
             color: white;
-            border-radius: 8px;
+            border-radius: 10px;
             transition: background-color 0.3s;
+            text-align: center;
+            max-width: 250px;
+            font-weight: bold;
         }
-        
+
         .start-game-button:hover {
             background-color: #218838;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+
+        h1 {
+            text-align: center;
+            color: #fff;
+            font-size: 2.5em;
+            margin: 20px 0 30px 0;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
         }
     </style>
 </head>
