RESPAWNボタン実装(ソロ&マルチ)

--- a/public/game.html
+++ b/public/game.html
@@ -89,6 +89,7 @@
     <div id="button-container">
         <button id="guess-button">GUESS</button>
         <button id="reveal-distance-button">HINT</button>
+        <button id="respawn-button">RESPAWN</button>
         <button id="restart-button" style="display: none;">RESTART</button>
         <button id="exit-button" style="display: none;">EXIT</button>
     </div>
