--- a/public/game.html
+++ b/public/game.html
@@ -84,6 +84,22 @@
         <div id="pano"></div>
         <div id="map"></div>
     </div>
+
+    <!-- メモ機能ボックス - マップの外に配置 -->
+    <div id="memo-controls">
+        <div id="memo-box-left" class="memo-box memo-eye-box">
+            <!-- 目のアイコン（左側） -->
+            <svg id="memo-eye-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z" fill="currentColor"/>
+            </svg>
+        </div>
+        <div id="memo-box-right" class="memo-box memo-trash-box">
+            <!-- ゴミ箱アイコン（右側） -->
+            <svg id="memo-trash-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z" fill="currentColor"/>
+            </svg>
+        </div>
+    </div>
     <div id="result"></div>
     <div id="distance-display"></div>
     <div id="button-container">
