--- a/public/game.html
+++ b/public/game.html
@@ -110,6 +110,8 @@
         <button id="exit-button" style="display: none;">EXIT</button>
     </div>
 
+    <!-- Canvas Confetti ライブラリ -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="game.js"></script>
     <script src="/api/maps-script"></script>
 </body>
