--- a/public/rules.html
+++ b/public/rules.html
@@ -4,6 +4,7 @@
 <head>
     <title>東京3kmチャレンジ - ルール</title>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <style>
         body {
