--- a/public/game.html
+++ b/public/game.html
@@ -87,10 +87,10 @@
 
     <!-- メモ機能ボックス - マップの外に配置 -->
     <div id="memo-controls">
-        <div id="memo-box-left" class="memo-box memo-eye-box">
-            <!-- 目のアイコン（左側） -->
-            <svg id="memo-eye-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z" fill="currentColor"/>
+        <div id="memo-box-left" class="memo-box memo-flag-box">
+            <!-- フラッグアイコン（左側） -->
+            <svg id="memo-flag-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <polygon points="3,3 3,21 4.5,21 4.5,13.5 19.5,10.5 4.5,7.5 4.5,3" fill="lightblue" stroke="currentColor" stroke-width="0.5"/>
             </svg>
         </div>
         <div id="memo-box-right" class="memo-box memo-trash-box">
